RichwoodNew/src/objects/Applied_to_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applied to Forecast</relationshipLabel>
        <relationshipName>Applied_to_Forecast</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rep_Forecast__c</fullName>
        <label>Rep Forecast</label>
        <referenceTo>Rep_Forecast__c</referenceTo>
        <relationshipLabel>Applied to Forecast</relationshipLabel>
        <relationshipName>Applied_to_Forecast</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Open</fullName>
                </value>
                <value>
                    <fullName>2 - Rolled</fullName>
                </value>
                <value>
                    <fullName>3 - Won</fullName>
                </value>
                <value>
                    <fullName>4 - Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Applied to Forecast</label>
    <nameField>
        <label>Applied to Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied to Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>